--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/vmmmc5/calzadoenlanube#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "i": "^0.3.7",
+    "mysql": "^2.18.1"
   },
   "description": ""
 }
